force-app/main/default/objects/SurveyInvitation__c/SurveyInvitation__c.object-meta.xml
<CustomObject>
    <description>Tracks unique survey invitations sent to participants. Each invitation has a unique token that can only be used once to complete the survey.</description>
    <label>Survey Invitation</label>
    <nameField>
        <displayFormat>INV-{000000}</displayFormat>
        <label>Invitation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Invitations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>