force-app/main/default/objects/SurveyInvitation__c/fields/CompletedDate__c.field-meta.xml
<CustomField>
    <fullName>CompletedDate__c</fullName>
    <description>Date and time when the survey was completed</description>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>