force-app/main/default/objects/SurveyInvitation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional reference to a Contact record for this invitation</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Survey Invitations</relationshipLabel>
    <relationshipName>SurveyInvitations</relationshipName>
    <type>Lookup</type>
</CustomField>