force-app/main/default/objects/SurveyInvitation__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email address of the invited participant</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>