force-app/main/default/objects/SurveyInvitation__c/fields/EventDate__c.field-meta.xml
<CustomField>
    <fullName>EventDate__c</fullName>
    <description>The event date (e.g., training date) from which the expiration period is calculated. When set, the invitation expires after the number of days specified in Survey Settings from this date instead of the creation date.</description>
    <label>Event Date</label>
    <type>DateTime</type>
</CustomField>