force-app/main/default/objects/SurveyInvitation__c/fields/EventTopic__c.field-meta.xml
<CustomField>
    <fullName>EventTopic__c</fullName>
    <description>The topic or name of the event (e.g., training topic) associated with this invitation. Used in dynamic survey headers.</description>
    <label>Event Topic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>