force-app/main/default/objects/SurveyInvitation__c/fields/ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ExpirationDate__c</fullName>
    <description>Date and time when this invitation expires and can no longer be used</description>
    <label>Expiration Date</label>
    <type>DateTime</type>
</CustomField>