force-app/main/default/objects/SurveyInvitation__c/fields/ParticipantName__c.field-meta.xml
<CustomField>
    <fullName>ParticipantName__c</fullName>
    <description>Name of the invited participant</description>
    <label>Participant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>