force-app/main/default/objects/SurveyInvitation__c/fields/RelatedRecordId__c.field-meta.xml
<CustomField>
    <fullName>RelatedRecordId__c</fullName>
    <description>Optional reference to the related record (e.g., Training Event) that provides the event date for expiration calculation. This is a text field to support any object type dynamically.</description>
    <label>Related Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>