force-app/main/default/objects/SurveyInvitation__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The survey this invitation is for</description>
    <label>Survey</label>
    <referenceTo>Survey__c</referenceTo>
    <relationshipLabel>Survey Invitations</relationshipLabel>
    <relationshipName>SurveyInvitations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>