force-app/main/default/objects/SurveyInvitation__c/fields/SurveyTaker__c.field-meta.xml
<CustomField>
    <fullName>SurveyTaker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the SurveyTaker record created when this invitation was completed</description>
    <label>Survey Taker</label>
    <referenceTo>SurveyTaker__c</referenceTo>
    <relationshipLabel>Survey Invitations</relationshipLabel>
    <relationshipName>SurveyInvitations</relationshipName>
    <type>Lookup</type>
</CustomField>