force-app/main/default/objects/SurveyInvitation__c/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique token for the survey invitation URL. Used to identify this specific invitation.</description>
    <externalId>true</externalId>
    <label>Token</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>